Fix unaligned icons within login form

--- a/resources/assets/less/admin.less
+++ b/resources/assets/less/admin.less
@@ -53,6 +53,9 @@
 }
 
 .login-box {
+  .has-feedback label ~ .form-control-feedback {
+    top: 15px;
+  }
   .header {
     background: none repeat scroll 0 0 @auth_color;
     border-radius: 4px 4px 0 0;
